--- a/app/assets/stylesheets/viewer.css
+++ b/app/assets/stylesheets/viewer.css
@@ -1,13 +1,14 @@
 iframe {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     border: none;
 }
 
 #viewer-messages
 {
-    margin-top: 10%;
+    padding-top: 10%;
     text-align: center;
 }
 
